Properly parse vue-router number recipe param
Update recipe steps
